package com.pfeilda.ajb.equipment;

public class AlterManager {
}
